# server/docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "https"
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -12,7 +12,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "film-catalog-8re5.onrender.com",
+    "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
         "/actors": {
